--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
     <title>XyGod-CrouseDesign</title>
     <meta name="description" content="Opinionated Vite Starter Template" />
   </head>
-  <body class="font-sans dark:text-white dark:bg-hex-121212">
+  <body
+    class="font-sans dark:text-white dark:bg-hex-121212"
+    dark:duration-300!
+    transition-colors!
+    duration-300!
+  >
     <div id="app"></div>
     <noscript>
       <div>Please enable JavaScript to use this application.</div>
     </noscript>
+
     <script>
       ;(function () {
         const prefersDark =
